// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero preview component renders without crashing 1`] = `
<div
  className="hero-preview"
>
  <div
    className="outer-wrapper"
    style={Object {}}
  >
    <div
      className="title"
    >
      <div
        className="heading-group"
      >
        <h1
          style={Object {}}
        >
          
        </h1>
        <p
          style={Object {}}
        >
          
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero preview component renders without crashing when instance has no cover image provided 1`] = `
<div
  className="hero-preview"
>
  <div
    className="outer-wrapper"
    style={Object {}}
  >
    <div
      className="title"
    >
      <div
        className="heading-group"
      >
        <h1
          style={
            Object {
              "color": "#000",
            }
          }
        >
          Welcome to Test instance
        </h1>
        <p
          style={
            Object {
              "color": "#999",
            }
          }
        >
          It works! Powered by Open edX®
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero preview component renders without crashing when instance has no home page overlay html provided 1`] = `
<div
  className="hero-preview"
>
  <div
    className="outer-wrapper"
    style={
      Object {
        "backgroundImage": "url(\\"https://example.com/image.png\\")",
        "backgroundSize": "731px 258px",
      }
    }
  >
    <div
      className="title"
    >
      <div
        className="heading-group"
      >
        <h1
          style={
            Object {
              "color": "#000",
            }
          }
        >
          
        </h1>
        <p
          style={
            Object {
              "color": "#999",
            }
          }
        >
          
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero preview component renders without crashing when instance has no theme set up 1`] = `
<div
  className="hero-preview"
>
  <div
    className="outer-wrapper"
    style={
      Object {
        "backgroundImage": "url(\\"https://example.com/image.png\\")",
        "backgroundSize": "731px 258px",
      }
    }
  >
    <div
      className="title"
    >
      <div
        className="heading-group"
      >
        <h1
          style={Object {}}
        >
          Welcome to Test instance
        </h1>
        <p
          style={Object {}}
        >
          It works! Powered by Open edX®
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero preview component renders without crashing when the instance only has the cover image provided 1`] = `
<div
  className="hero-preview"
>
  <div
    className="outer-wrapper"
    style={
      Object {
        "backgroundImage": "url(\\"https://example.com/image.png\\")",
        "backgroundSize": "731px 258px",
      }
    }
  >
    <div
      className="title"
    >
      <div
        className="heading-group"
      >
        <h1
          style={Object {}}
        >
          
        </h1>
        <p
          style={Object {}}
        >
          
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero preview component renders without crashing when the instance only has the hero subtitle color set up 1`] = `
<div
  className="hero-preview"
>
  <div
    className="outer-wrapper"
    style={Object {}}
  >
    <div
      className="title"
    >
      <div
        className="heading-group"
      >
        <h1
          style={Object {}}
        >
          
        </h1>
        <p
          style={
            Object {
              "color": "#000",
            }
          }
        >
          
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero preview component renders without crashing when the instance only has the hero title color set up 1`] = `
<div
  className="hero-preview"
>
  <div
    className="outer-wrapper"
    style={Object {}}
  >
    <div
      className="title"
    >
      <div
        className="heading-group"
      >
        <h1
          style={
            Object {
              "color": "#000",
            }
          }
        >
          
        </h1>
        <p
          style={Object {}}
        >
          
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero preview component renders without crashing when the instance only has the home page overlay html provided 1`] = `
<div
  className="hero-preview"
>
  <div
    className="outer-wrapper"
    style={Object {}}
  >
    <div
      className="title"
    >
      <div
        className="heading-group"
      >
        <h1
          style={Object {}}
        >
          Welcome to Test instance
        </h1>
        <p
          style={Object {}}
        >
          It works! Powered by Open edX®
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero preview component renders without crashing when the instance only has the theme config set up 1`] = `
<div
  className="hero-preview"
>
  <div
    className="outer-wrapper"
    style={Object {}}
  >
    <div
      className="title"
    >
      <div
        className="heading-group"
      >
        <h1
          style={
            Object {
              "color": "#000",
            }
          }
        >
          
        </h1>
        <p
          style={
            Object {
              "color": "#999",
            }
          }
        >
          
        </p>
      </div>
    </div>
  </div>
</div>
`;
